# src/modules/cars/entities/Specification.ts
@@ -1,0 +1,25 @@
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
+import { v4 as uuidv4 } from 'uuid';
+
+@Entity('specifications')
+class Specification {
+  @PrimaryColumn()
+  id?: string;
+
+  @Column()
+  description: string;
+
+  @Column()
+  name: string;
+
+  @CreateDateColumn()
+  created_at: Date;
+
+  constructor() {
+    if (!this.id) {
+      this.id = uuidv4();
+    }
+  }
+}
+
+export default Specification;
