# src/routes/specifications.routes.ts
@@ -1,13 +1,11 @@
 import { Router } from 'express';
 
-import createSpecificationController from '../modules/cars/useCases/createSpecification';
+import CreateSpecificationController from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationsRoutes = Router();
 
-// instancia repository
+const createSpecificationController = new CreateSpecificationController();
 
-specificationsRoutes.post('/', (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+specificationsRoutes.post('/', createSpecificationController.handle);
 
 export default specificationsRoutes;
