# src/swagger.json
@@ -1,8 +1,8 @@
 {
 "openapi":"3.0.0",
 "info": {
-    "title": "RentalX Documentation",
-    "description":"this is an API Renti",
+    "title": "Rentx Documentation",
+    "description":"this is an API Rent",
     "version":"1.0.0",
     "contact":{
     "email":"leandrofaustino88@gmail.com"
@@ -16,7 +16,7 @@
             "description":"Create a new Category",
             "requestBody":{
             "content": {
-            "aplication/json":{
+            "application/json":{
             "schema":{
                 "type": "object",
                 "properties":{
@@ -52,8 +52,8 @@
          "responses":{
              "200": {
                  "description":"Sucess",
-                 "constent": {
-                     "aplication/json": {
+                 "content": {
+                     "application/json": {
                          "schema": {
                              "type": "array",
                              "items": {
@@ -73,6 +73,73 @@
              }
          }
      }
+    },
+    "/categories/import": {
+        "post": {
+            "tags":["Category"],
+                "summary": "Upload a new category",
+                "description": "Upload a new category",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                "file": {
+                                   "type": "string",
+                                   "format": "binary" 
+                                }
+                            }
+                        }
+                    }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            
+        }
+    },
+    "/specifications": {
+        "post": {
+            "tags": ["Specifications"],
+            "summary":"Create a specification",
+            "description": "Create a new specification",
+            "requestBody": {
+              "content": {
+                "application/json": {
+                    "schema": {
+                        "$ref":"#/definitions/Specification"
+                    }
+                }
+
+            }
+        },
+        "responses":{
+            "201": {
+                "description": "Created"
+            },
+            "500": {
+                "description": "Specification already exists!"
+            }
+        }
     }
+}
+
+},
+"definitions": {
+    "Specification": {
+        "type": "object",
+        "properties": {
+            "name": {
+                "type":"string"
+        },
+            "description": {
+                "type": "string"
+        }
+    }
+}
 }
 }
